--- a/base/templates/base/new_post.html
+++ b/base/templates/base/new_post.html
@@ -1,6 +1,40 @@
 {% extends 'main.html' %}
+{% load static %}
+ 
 
 {% block content %}
+
+
+<!-- 
+
+(Assuming Awesomplete is actually being fed into this page)
+How the list is supposedly being retrieved currently:
+
+
+
+ -->
+
+
+
+<form class="form" action="" method="POST">
+  {% csrf_token %}
+  <div class="form__group">
+    <label for="body">Choose a language</label>
+    <input type="text" class="awesomplete" list="languages" name="language" />
+    <datalist id="languages">
+      {% for lang in langs_list %}
+        <option value="{{ lang }}">{{ lang }}</option>
+      {% endfor %}
+    </datalist>
+  </div>
+
+  <div class="form__action">
+    <a class="btn btn--dark" href="{% url 'home' %}">Cancel</a>
+    <button class="btn btn--main" type="submit">Submit</button>
+  </div>
+</form>
+
+
 <form class="form" action="" method="POST">
   {% csrf_token %}
   <div class="form__group">
