--- a/templates/main.html
+++ b/templates/main.html
@@ -7,6 +7,7 @@
   <title>Language Help</title>
   <link rel="stylesheet" href="{% static 'base/awesomplete.css' %}">
   <script src="{% static 'base/awesomplete.js' %}" async></script>
+  <link rel="stylesheet" href="{% static 'base/styles.css' %}">
 </head>
 <body>
   {% include 'navbar.html' %}
