--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -11,6 +11,7 @@
   <p>by {{ post.author }}</p> 
   <p>{{ post.body }}</p>
   <p>{{ post.reply_count }} replies</p>
+  <p>{{ post.language }}</p>
   <hr>
 </a>
 
